--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/vietnam/ceremony_country/partner_other/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/vietnam/ceremony_country/partner_other/_same_sex.govspeak.erb
@@ -1,36 +1,39 @@
-You may be able to register a civil partnership or get married at the British embassy or consulate in Vietnam.
+You may be able to get married at the British embassy in Hanoi.
 
-Email <notarialservices.hanoi@fco.gov.uk> to make an appointment at the embassy in Hanoi.
+Make an appointment at the embassy or consulate to give notice of your intention to marry:  
 
-^You must stay in Vietnam for 14 days from the date of your appointment, if you’re not normally resident in Vietnam.^
+- [make an appointment at the British Embassy in Hanoi](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-hanoi/notice-of-marriage-or-civil-partnership/slot_picker)
+- [make an appointment at the Consulate General in Ho Chi Minh City](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-general-ho-chi-minh-city/notice-of-marriage-or-civil-partnership/slot_picker)
 
-The embassy will confirm if your marriage can be registered and give you a link to book a ‘notice of marriage’ appointment online and a reference number. You must quote the reference number when booking your appointment.
+^You can only register your marriage at the British Embassy in Hanoi.^ 
 
-You and your partner will need to sign a declaration and provide proof of residence eg, an employer’s letter, a bank statement or your Vietnamese visa.
+##What documents you’ll need
 
-You’ll both need to bring your original passports. You’ll also need evidence that your partner is free to marry - a document from their government or their passport that says they are unmarried. If either of you have been divorced, widowed or in a civil partnership before, you’ll also need to provide:
+You and your partner will need to sign a declaration and provide proof of residence for example, an employer’s letter, a bank statement or your flight ticket.
+
+You’ll both need your original passports. If either of you have been divorced, widowed or in a civil partnership before, you’ll also need either:
 
 - a [decree absolute or final order](/copy-decree-absolute-final-order)
 - the [death certificate](/order-copy-birth-death-marriage-certificate/)
 
-You’ll need to get the documents [translated](/government/collections/lists-of-translators-and-interpreters) if they’re not in English and and [‘legalised’](/get-document-legalised) (certified as genuine) by the Ministry of Foreign Affairs in your home country or your country’s embassy in Vietnam.
+Foreign documents, for example certificates of no impediment (CNI) or divorce certificates, must be translated into English and certified by a qualified translator.  
 
 ##What you need to do
 
-You’ll need to be in Vietnam for 7 clear days (not including the date of arrival) before your appointment. At your appointment, the embassy or consulate will give you:
+You’ll both need to be in Vietnam for 7 clear days (not including the date of arrival) before your appointment to post notice of your intention to marry. At your appointment, the embassy or consulate will give you:
 
--  a notice of registration
--  a declaration that you and your partner will need to swear, stating that you’re legally entitled to marry or enter into a civil partnership
+-  a notice of intention to marry
+-  a declaration that you and your partner will need to swear, stating that you’re legally entitled to marry
 
 Once you’ve completed these and paid the registration fee, the embassy or consulate will display your notice publicly for 14 days.
 
-^You must stay in Vietnam while your notice is posted.^
+^You must stay in Vietnam while your notice is posted if you're normally resident in Vietnam.^
 
-As long as nobody registers an objection you can get married or enter into a civil partnership up to 3 months after you gave notice.
+As long as nobody registers an objection you can get married.
 
 You’ll need to bring two witnesses to your ceremony - they’ll need to show their photo ID (for example passport or driver’s licence).
 
-You’ll need to pay a fee to register your marriage or civil partnership and a fee for your marriage or civil partnership certificate.
+You’ll need to pay a fee to register your marriage and a fee for your marriage.
 
 ^All same-sex marriages must take place under English and Welsh or Scottish law even if you live in or are from Northern Ireland. Tell the embassy or consulate which law you want to get married under at your appointment.^
 
@@ -40,10 +43,11 @@ Your partner can apply to [become a British citizen](/becoming-a-british-citizen
 
 ## Fees
 
-<%= render partial: 'consular_fees_table_items.govspeak.erb',
-           collection: calculator.services,
-           as: :service,
-           locals: { calculator: calculator } %>
+Service | Fee
+-|-
+Receiving a notice of registration | <%= format_money calculator.consular_fee(:receiving_notice_of_registration) %>
+Registering a marriage | <%= format_money calculator.consular_fee(:registering_marriage) %>
+Issuing a marriage certificate | <%= format_money calculator.consular_fee(:issuing_civil_partnership_or_marriage_certificate) %>
 
 You can pay fees for consular services in the local currency or pounds sterling - these are shown in the list of [consular fees for Vietnam](/government/publications/vietnam-consular-fees).
 
