--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/uk/partner_other/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/uk/partner_other/_opposite_sex.govspeak.erb
@@ -1,30 +1,43 @@
-Contact the [Embassy of Latvia](/government/publications/foreign-embassies-in-the-uk) before making any plans to find out about local marriage laws, including what documents you’ll need.
+Contact the relevant local authorities in Latvia to find out about local marriage laws, including what documents you’ll need.
 
-^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for Latvia](/foreign-travel-advice/latvia) before making any plans.
+^You should [get legal advice](/government/collections/list-of-lawyers) before making any plans.^
 
 ##What you need to do
 
-You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry.
+You may be asked to provide an ‘affirmation for marriage’ document to prove you’re allowed to marry.
 
-You can normally get a CNI by giving a notice of marriage at your local register office or registrar in the UK. Find your local office or registrar in [England and Wales](https://www.gov.uk/register-offices), [Scotland](http://www.nrscotland.gov.uk/files/registration/reglist.pdf), [Northern Ireland](http://www.nidirect.gov.uk/index/information-and-services/government-citizens-and-rights/births-and-registration/district-registrars-in-northern-ireland.htm), [Isle of Man](http://www.gov.im/registries/general/civilregistry), [Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us).
+Make an appointment at the British embassy or consulate in Latvia to swear an affirmation or affidavit that you’re free to marry. You’ll need to bring your and your partner’s passport and pay a fee.
 
-^A CNI issued in Scotland is valid for 3 months. A CNI issued in England, Wales or Northern Ireland will not expire. Check with your local register office to find out how long a CNI is valid if you live in the Channel Islands or the Isle of Man. You should also check with the local authorities in Latvia to find out how long a CNI is valid under local law.^
+[Make an appointment at the embassy in Riga.](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-riga/oaths-affirmations-and-affidavits/slot_picker)
 
-###Legalisation and translation
+If you or your partner have been divorced, widowed or previously in a civil partnership, you’ll also need whichever of the following documents is appropriate:
 
-You might need to exchange your UK-issued CNI for one that’s valid in Latvia at the nearest embassy or consulate to where you’re getting married.
+- a [decree absolute or final order](/copy-decree-absolute-final-order)
+- a civil partnership dissolution or annulment certificate
+- your (or your partner’s) former spouse or civil partner’s [death certificate](/order-copy-birth-death-marriage-certificate/)
 
-You should also check if it needs to be:
+You’ll also need to provide evidence if you’ve changed your name by deed poll.
 
-- ‘[legalised](/get-document-legalised)’ (certified as genuine)
-- translated - [find a translator abroad](/government/collections/list-of-lawyers), or in the UK through the [Institute of Linguists](http://www.ciol.org.uk)
+^You’ll also need to provide evidence of nationality or residence if the divorce or dissolution took place outside the UK. You’ll need to get it [legalised](/get-document-legalised) and [translated](/government/collections/lists-of-translators-and-interpreters) if it’s not in English.^
 
-You should also check with the local authorities in Latvia to find out if you need to provide legalised and translated copies of any other documents.
+You’ll need to complete an [‘Affidavit for marriage’](/government/publications/affidavitaffirmation-forms-latvia) form.
+
+You can download and fill in (but not sign) the form in advance.
+
+You must take the form with you to your appointment.
 
 %The names on all documents you provide must appear exactly as they do on your passports - if not, the authorities may refuse to allow the marriage to go ahead. You may need to provide evidence if the name on your passport is different to your birth certificate (for example marriage certificate or deed poll).%
 
-##Naturalisation of your partner if they move to the UK
+^Your partner will probably need to get an affirmation or affidavit as well.^
 
-Your partner can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
+## Fees
 
-*[CNI]:certificate of no impediment
+<%= render partial: 'consular_fees_table_items.govspeak.erb',
+           collection: calculator.services,
+           as: :service,
+           locals: { calculator: calculator } %>
+
+You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Latvia](/government/publications/latvia-consular-fees).
+
+<%=  render partial: 'how_to_pay.govspeak.erb',
+            locals: {calculator: calculator}%>
