--- a/lib/smart_answer_flows/register-a-birth/questions/married_couple_or_civil_partnership.govspeak.erb
+++ b/lib/smart_answer_flows/register-a-birth/questions/married_couple_or_civil_partnership.govspeak.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  Were you married to the other parent when your child was born?
+  Were you married or in a civil partnership with the other parent when your child was born?
 <% end %>
 
 <% options(
