--- a/lib/smart_answer_flows/calculate-married-couples-allowance/questions/how_much_expected_contributions_before_tax.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-married-couples-allowance/questions/how_much_expected_contributions_before_tax.govspeak.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :hint do %>
-  If none, please enter 0.
+  These are payments into pension schemes where your contributions are paid before your income is taxed (called ‘net pay arrangements’) or retirement annuity contracts (called ‘gross contributions’). Enter the total for the whole year. If none, enter 0.
 <% end %>
 
 <% content_for :error_message do %>
