--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/uk/partner_british/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/uk/partner_british/_opposite_sex.govspeak.erb
@@ -37,7 +37,4 @@ You must take the form with you to your appointment.
            as: :service,
            locals: { calculator: calculator } %>
 
-You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Latvia](/government/publications/latvia-consular-fees).
-
-<%=  render partial: 'how_to_pay.govspeak.erb',
-            locals: {calculator: calculator}%>
+You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Latvia](/government/publications/latvia-consular-fees). You can only pay by cash.
