--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/ceremony_country/partner_local/_opposite_sex.html.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/ceremony_country/partner_local/_opposite_sex.html.erb
@@ -59,7 +59,11 @@ Box 27819
 115 93 Stockholm
 $A
 
-^You don't need to stay in the country while your notice is posted.^
+Once you’ve posted your notice and paid the registration fee, the embassy or consulate will display your notice of marriage publicly for 7 days, from the day after they receive your payment.
+
+As long as nobody registers an objection, the embassy you will give you a CNI on the 8th day. You don’t need to stay in the country while your notice is posted.
+
+After you receive your CNI, you need to take it to the [Swedish tax authorities](http://www.skatteverket.se/privat.4.76a43be412206334b89800052864.html) to be registered.
 
 ## Fees
 
