Same sex - user in Sweden - partner Swedish
SECTION
##Naturalisation of your partner if they move to the UK

CHANGED
Added in naturalisation heading and content.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/ceremony_country/partner_local/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/ceremony_country/partner_local/_same_sex.govspeak.erb
@@ -70,6 +70,10 @@ As long as nobody registers an objection, the embassy you will give you a CNI on
 
 After you receive your CNI, you need to take it to the [Swedish tax authorities](http://www.skatteverket.se/privat.4.76a43be412206334b89800052864.html) to be registered.
 
+##Naturalisation of your partner if they move to the UK
+
+Your partner can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
+
 ## Fees
 
 <%= render partial: 'consular_fees_table_items.govspeak.erb',
