--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/_opposite_sex.html.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/_opposite_sex.html.erb
@@ -1,8 +1,11 @@
 ## Before you start
+
 Contact the local Italian ‘comune’ (town hall) to find out about local marriage laws, including what documents you and your partner will need.
 
 If you’re a woman and you live in Italy, you must wait 300 days after divorcing or the death of your husband before remarrying.
+
 ## Prove you’re free to get married
+
 What you need to do depends on where you are.
 
 You need to prove you’re legally allowed to get married by getting:
@@ -15,14 +18,15 @@ If you’re not in the UK or Italy you’ll need to either:
 - go to the UK and get a CNI
 - go to Italy and get a Nulla Osta
 
-^Your partner will also need proof that they’re free to get married. The documents they need might be different if they’re not British.^
+^Your partner will also need a CNI and statutory declaration or a Nulla Osta if they’re British. If they’re not, the documents they need might be different.^
 
 ### Get a CNI and a statutory declaration
+
 You’ll need to get a CNI and a statutory declaration if you’re in the UK.
 
 To get a CNI, make an appointment at your [local register office](/register-offices) to give notice of your marriage. A CNI costs £35.
 
-^Contact your local register office to find out what you need to do if you live in [Scotland](http://www.nrscotland.gov.uk/files/registration/reglist.pdf), [Northern Ireland](http://www.nidirect.gov.uk/index/information-and-services/government-citizens-and-rights/births-and-registration/district-registrars-in-northern-ireland.htm), [Isle of Man](http://www.gov.im/registries/general/civilregistry), [Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey.](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us)^
+^Contact your local register office to find out what you need to do if you live in [Scotland](http://www.nrscotland.gov.uk/files/registration/reglist.pdf), [Northern Ireland](http://www.nidirect.gov.uk/index/information-and-services/government-citizens-and-rights/births-and-registration/district-registrars-in-northern-ireland.htm), [Isle of Man](http://www.gov.im/registries/general/civilregistry), t[Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey.](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us)^
 
 You’ll need to bring [certain documents](/marriages-civil-partnerships/documents-to-take-to-the-register-office) with you to your appointment.
 
@@ -30,7 +34,7 @@ Your notice will be publicly displayed in the register office for 28 days. You c
 
 Your CNI won’t expire if it was issued in England, Wales or Northern Ireland. CNIs issued in Scotland expire after 3 months. Check with your local register office to find out how long a CNI is valid if you live in the [Isle of Man](http://www.gov.im/registries/general/civilregistry), [Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey.](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us)
 
-You should also check with the comune (town hall) to find out how long a CNI is valid under local law.
+A CNI is valid for 6 months under Italian law.
 
 You’ll also need to provide more information in a ‘statutory declaration’. You need to sign it in front of a [solicitor or public notary](http://www.lawsociety.org.uk/find-a-solicitor/) in the UK. They’ll charge you a fee.
 
@@ -41,60 +45,71 @@ $D
 $D
 
 ### Get a Nulla Osta
+
 You’ll need to get a Nulla Osta if you’re in Italy.
 
 To get a Nulla Osta, [make an appointment at the British Embassy in Rome](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-rome/notice-of-marriage-or-civil-partnership/slot_picker) to give notice of your marriage. Your partner doesn’t have to come with you.
 
-It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage) %> to give notice and <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %> for the Nulla Osta. If you want to pay in cash you need to pay in the [local currency](/government/publications/italy-consular-fees).
+You need to be in Italy for 3 full days before you can give notice. This means if you arrive on Monday you can’t give notice until Friday.
+
+It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage) %> to give notice and <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %> for the Nulla Osta. You can pay by card. If you want to pay in cash you need to pay in the [local currency](/government/publications/italy-consular-fees). 
 
 You’ll need to bring:
 
 - your passport
-- your partner’s passport (or a copy of their passport if they’re not British)
+- a copy of your partner’s passport
 - your [full birth certificate](/order-copy-birth-death-marriage-certificate/) including your parents’ details
-- proof that you live in Italy or you’ve been in Italy for at least 3 days - for example a residency certificate, utility bill or boarding pass
 - [notice of marriage](/government/publications/notice-of-marriage-form--2) and [affidavit for marriage](/government/publications/affirmationaffidavit-of-marital-status-form) - you can fill in (but not sign) these in advance
+- a residency certificate issued in the last 3 months (if you have one)
+- proof that you’ve been in Italy for at least 3 full days (if you don’t have a residency certificate) - for example a boarding pass or a bank statement
 
 ^You can’t use an Italian address on your notice of marriage if you don’t have a residency certificate.^
 
 If you’ve been married or in a civil partnership before, you’ll also need:
 
-- your [decree absolute or final order](/copy-decree-absolute-final-order) (this could be a PDF and covering email) - if you’re divorced
+- your [decree absolute or final order](/copy-decree-absolute-final-order) (this could be a printed PDF and covering email from the court) - if you’re divorced
 - your annulment certificate - if your marriage or civil partnership was annulled
 - your civil partnership dissolution - if your civil partnership was dissolved
-- evidence of nationality or residence - if the divorce or dissolution took place outside the UK
 - your partner’s [death certificate](/order-copy-birth-death-marriage-certificate/) and marriage certificate - if you’ve been widowed
 
-The British embassy will display your notice of marriage publicly for 7 days. If nobody registers an objection, your Nulla Osta should be ready within 2 weeks of giving your notice. You can collect it in person or have it delivered by post.
+^If your divorce, civil partnership dissolution or annulment took place outside the UK, you’ll also need evidence that you or your former partner lived in or were a national of that country at the time of the divorce.^
+
+The British embassy will display your notice of marriage publicly for 7 full days. This means if you give notice on Monday, it will be displayed until the following Tuesday. If nobody registers an objection, your Nulla Osta should be ready within 2 weeks of giving your notice. You can collect it in person or have it delivered by post.
 
 You don’t need to stay in the country while your notice is displayed.
 
 ### If you’ve changed your name
-The names on all documents you provide must appear exactly as they do on your passport - if not, the authorities may refuse to allow the marriage to go ahead.
 
-You’ll need to provide evidence of your name change if the name on your passport is different to your birth certificate (for example, a marriage certificate or deed poll).
+If your name on any of your documents doesn’t appear exactly as it does on your birth certificate, you’ll need to provide evidence of your name change (for example, a marriage certificate or deed poll). If you don’t, the authorities may refuse to allow the marriage to go ahead.
 
 ### Get your documents translated and legalised
-You need to get your statutory declaration and CNI [legalised](/get-document-legalised) (certified as genuine) by the Foreign & Commonwealth Office (FCO).
+
+If you’ve got a statutory declaration and CNI, you’ll need to get them [legalised](/get-document-legalised) (certified as genuine) by the Foreign and Commonwealth Office.
 
 You’ll also need to get a certified translation of your CNI. You need to use an [approved translator](/government/publications/italy-list-of-translators-and-interpreters).
+
+You don’t need to get a Nulla Osta legalised or translated.
 
 You need to get your supporting documents (for example, a decree absolute) [legalised](/get-document-legalised) and [translated](/government/publications/italy-list-of-translators-and-interpreters) if they’re not in English or Italian.
 
 You’ll be charged fees for translating your documents.
 
 ## Get married
-To get married, you’ll need either:
 
-- a CNI and a statutory declaration
-- a Nulla Osta
+You’ll need to give your Nulla Osta or CNI and statutory declaration to the person who’s going to marry you. This will be:
 
-You’ll need to give the original documents to the person who’s going to marry you. This will be:
-
-a priest if you’re having a religious ceremony
-a registrar at the comune (town hall) if you’re having a civil ceremony
+- a priest if you’re having a religious ceremony
+- a registrar at the comune (town hall) if you’re having a civil ceremony
 
 ## After you get married
-Your marriage should be recognised in the UK if you follow the correct process according to local law - you won’t need to register it in the UK.
+
+Your marriage will be recognised in the UK if:
+
+- you follow the correct process according to the law in Italy
+- it would be allowed under UK law
+
+You won’t need to register your marriage in the UK.
+
+If you need extra copies of your marriage certificate, you can apply for them at the local comune. 
 
 If your partner isn’t a British citizen, they can apply for [British citizenship](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
