Content update to the SFF start page
This commit the following change.
CHANGE

• forms for EU students

TO

• forms for EU students studying in England

I have included the regression test artefacts within to
show areas affected by these changes

Based on the above, I have reviewed the changes to the
regression test artefacts and they appear as expected.

Already existing unit, regression and integration tests
passed, giving assurance that the aforementioned commit/changes
have had no (interfering) effect to other smart answers.

--- a/lib/smart_answer_flows/student-finance-forms/student_finance_forms.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-forms/student_finance_forms.govspeak.erb
@@ -11,7 +11,7 @@
 
   + forms PN1, PR1, PTL1, PFF2 and CYI
   + forms for parents
-  + forms for EU students
+  + forms for EU students studying in England
   + forms for Disabled Students’ Allowances (DSA)
 <% end %>
 
